@@ -1,5 +1,13 @@
 2017-04-30  Brady Eidson  <beidson@apple.com>
 
+        More fixing after r215991
+        https://bugs.webkit.org/show_bug.cgi?id=171483
+
+        * NetworkProcess/cocoa/NetworkProcessCocoa.mm:
+        (WebKit::NetworkProcess::syncAllCookies):
+
+2017-04-30  Brady Eidson  <beidson@apple.com>
+
         Fix r215991
         https://bugs.webkit.org/show_bug.cgi?id=171483
 
